# gen_hosp_exploration

./: .gitignore  README.md  data.dvc  dvc.yaml  main.py  project_notes.txt  pyproject.toml
data/: .gitignore  data_clean.parquet
data/processed/: .gitignore
data/raw/: Hospital_General_Info.xlsx.dvc
models/: .gitignore
notebooks/: eda_notebook.ipynb  eval_notebook.ipynb
preds/: .gitignore  rf_preds.parquet
reports/: .gitignore
src/: acquire_data.py  evaluate.py  models.py  preprocess_data.py  process_data.py  split_data.py  stack_models.py
