[project]
name = "gen-hosp-exploration"
version = "0.1.0"
description = "Exploration of Hospital Measures and Relation to Overall Hospital Rating"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "papermill>=2.7.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
